--- a/sites/all/themes/cb/sass/components/_tag.scss
+++ b/sites/all/themes/cb/sass/components/_tag.scss
@@ -43,6 +43,7 @@
       @include transition-timing-function(ease-in);
 
       a {
+        display: inline;  // needed, because some a-elements inherit inline-block
         padding: 5px 10px 5px 15px;
         color: $gray-dark;
         font-family: $sans-serif-arial-helvetica;
